<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignment1.cjiang2_habittracker.AddHabits">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/habitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/habitText"/>
    <EditText
        android:id="@+id/habit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habitTextView"
        android:hint="@string/habit_hint"
        android:layout_marginTop="6dp"
        android:maxLength="50"/>
    <TextView
        android:id="@+id/weekTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habit"
        android:layout_marginTop="12dp"
        android:text="@string/weekText"/>
    <EditText
        android:id="@+id/habitWeek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weekTextView"
        android:hint="@string/week_hint"
        android:layout_marginTop="6dp" />
    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habitWeek"
        android:layout_marginTop="12dp"
        android:text="@string/dateText"/>
    <EditText
        android:id="@+id/habitDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTextView"
        android:layout_marginTop="6dp"
        android:inputType="date" />
    <Button
        android:id="@+id/ok"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/habitDate"
        android:text="@string/ok"/>

</RelativeLayout>
</ScrollView>